--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,8 +6,8 @@ steps:
           config: '.buildkite/docker-compose.yml'
     command:
       - 'aws s3 cp s3://smith-artefacts/cache/oauth2-jwt-bearer-cache.tar.gz oauth2-jwt-bearer-cache.tar.gz || true'
-      - 'tar xfz openssh-protcol-cache.tar.gz -C /root || true'
-      - 'rm -f openssh-protcol-cache.tar.gz'
+      - 'tar xfz oauth2-jwt-bearer-cache.tar.gz -C /root || true'
+      - 'rm -f oauth2-jwt-bearer-cache.tar.gz'
       - 'mafia update'
       - 'mafia build'
       - 'tar cfz oauth2-jwt-bearer-cache.tar.gz -C /root .mafia .cabal'
